--- a/Destapa-Cañerias/Como-destapar-un-wc-con-soda-caustica.html
+++ b/Destapa-Cañerias/Como-destapar-un-wc-con-soda-caustica.html
@@ -138,27 +138,27 @@ Como destapar un wc con soda caustica - Como destapar un sanitario con bicarbona
 		  <!--TotalPostsList-->
 <!--PostsList-->
          <li  class="list-inline-item">
-       <a href="../Servicios/Harpic-destapacaños-inodoro.html">Harpic destapacaños inodoro </a> 
+       <a href="../Servicios/Estructura-de-la-planta-de-maiz.html">Estructura de la planta de maiz </a> 
          </li>
 <!--EndPostsList-->
 <!--PostsList-->
          <li  class="list-inline-item">
-       <a href="../Servicios/Destapador-de-baño-liquido-walmart.html">Destapador de baño liquido walmart </a> 
+       <a href="../Destapa-Cañerias/Camara-De-Registro-Cloacal.html">Camara De Registro Cloacal </a> 
          </li>
 <!--EndPostsList-->
 <!--PostsList-->
          <li  class="list-inline-item">
-       <a href="../Servicios/Aguafuerte-para-desatascar-tuberias.html">Aguafuerte para desatascar tuberias </a> 
+       <a href="../Servicios/No-Puedo-Destapar-La-Cañeria-en-Palermo.html">No Puedo Destapar La Cañeria en Palermo </a> 
          </li>
 <!--EndPostsList-->
 <!--PostsList-->
          <li  class="list-inline-item">
-       <a href="../Servicios/Destapacaños-harpic-turbo.html">Destapacaños harpic turbo </a> 
+       <a href="../Servicios/Con-Que-Destapo-Un-Bantilde;o.html">Con Que Destapo Un Baño </a> 
          </li>
 <!--EndPostsList-->
 <!--PostsList-->
          <li  class="list-inline-item">
-       <a href="../Destapa-Cañerias/Destapador-De-Cantilde;erias-Electrico.html">Destapador De Cañerias Electrico </a> 
+       <a href="../Servicios/Destape-De-Desagues.html">Destape De Desagues </a> 
          </li>
 <!--EndPostsList-->
 
@@ -221,57 +221,57 @@ Como destapar un wc con soda caustica - Como destapar un sanitario con bicarbona
                   <!--TotalRandPosts-->
 <!--RandPosts-->
              <div id="recent-post">         <li>
-       <a href="../Servicios/Destapar-Cañerias-en-Palermo.html">Destapar Cañerias en Palermo </a> 
+       <a href="../Servicios/Destapaciones-Cañerias-en-Palermo.html">Destapaciones Cañerias en Palermo </a> 
          </li>			  </div>
 <!--EndRandPosts-->
 <!--RandPosts-->
              <div id="recent-post">         <li>
-       <a href="../Servicios/Mejor-Destapador-De-Cañerias-en-Palermo.html">Mejor Destapador De Cañerias en Palermo </a> 
+       <a href="../Destapa-Cañerias/Destapaciones-Con-Maquina.html">Destapaciones Con Maquina </a> 
          </li>			  </div>
 <!--EndRandPosts-->
 <!--RandPosts-->
              <div id="recent-post">         <li>
-       <a href="../Servicios/Destapacaños-liquido-truper.html">Destapacaños liquido truper </a> 
+       <a href="../Destapa-Cañerias/Destapar-Desague-Pluvial.html">Destapar Desague Pluvial </a> 
          </li>			  </div>
 <!--EndRandPosts-->
 <!--RandPosts-->
              <div id="recent-post">         <li>
-       <a href="../Destapa-Cañerias/Destapa-cloacas-caballito.html">Destapa cloacas caballito </a> 
+       <a href="../Servicios/Productos-para-destapar-el-baño-walmart.html">Productos para destapar el baño walmart </a> 
          </li>			  </div>
 <!--EndRandPosts-->
 <!--RandPosts-->
              <div id="recent-post">         <li>
-       <a href="../Servicios/Informacion-sobre-las-estrellas.html">Informacion sobre las estrellas </a> 
+       <a href="../Destapa-Cañerias/Como-destapar-un-inodoro-tapado-con-jabon.html">Como destapar un inodoro tapado con jabon </a> 
          </li>			  </div>
 <!--EndRandPosts-->
 <!--RandPosts-->
              <div id="recent-post">         <li>
-       <a href="../Destapa-Cañerias/Destapa-cañerias-plomero-liquido.html">Destapa cañerias plomero liquido </a> 
+       <a href="../Servicios/Repuesto-de-quemadores-para-parrillas-a-gas.html">Repuesto de quemadores para parrillas a gas </a> 
          </li>			  </div>
 <!--EndRandPosts-->
 <!--RandPosts-->
              <div id="recent-post">         <li>
-       <a href="../Servicios/Proceso-de-la-planta-para-niños.html">Proceso de la planta para niños </a> 
+       <a href="../Servicios/Pendiente-Cantilde;eria-Cloacal.html">Pendiente Cañeria Cloacal </a> 
          </li>			  </div>
 <!--EndRandPosts-->
 <!--RandPosts-->
              <div id="recent-post">         <li>
-       <a href="../Servicios/Cocina-mabe-4-quemadores.html">Cocina mabe 4 quemadores </a> 
+       <a href="../Destapa-Cañerias/Destapador-De-Cañerias.html">Destapador De Cañerias </a> 
          </li>			  </div>
 <!--EndRandPosts-->
 <!--RandPosts-->
              <div id="recent-post">         <li>
-       <a href="../Destapa-Cañerias/Destapaciones-24-Hs.html">Destapaciones 24 Hs </a> 
+       <a href="../Servicios/Destapar-cañerias-con-bicarbonato-de-sodio.html">Destapar cañerias con bicarbonato de sodio </a> 
          </li>			  </div>
 <!--EndRandPosts-->
 <!--RandPosts-->
              <div id="recent-post">         <li>
-       <a href="../Servicios/Destape-De-Cañerias-en-Palermo.html">Destape De Cañerias en Palermo </a> 
+       <a href="../Destapa-Cañerias/Limpiar-Desague-Bantilde;o.html">Limpiar Desague Baño </a> 
          </li>			  </div>
 <!--EndRandPosts-->
 <!--RandPosts-->
              <div id="recent-post">         <li>
-       <a href="../Destapa-Cañerias/Como-destapar-bantilde;o-con-soda-caustica-inodoro.html">Como destapar baño con soda caustica inodoro </a> 
+       <a href="../Servicios/Que-son-los-mapas-estelares.html">Que son los mapas estelares </a> 
          </li>			  </div>
 <!--EndRandPosts-->
 
